--- a/css/pricing.css
+++ b/css/pricing.css
@@ -209,7 +209,8 @@ tbody tr:hover {
 	opacity: 0;
 	position: absolute;
 	top: 0;
-	left: 0;
+    left: 50%;
+    margin-left: -400px;
 	transition: all .125s ease-in-out;
 	z-index: 50;
 	width: auto; /* Prevent table from stretching to full size */
